@@ -27,6 +27,7 @@
             \n * Added check for corrupted DB, it is moved to a backup-file and a new DB will be created
             \n * Show last-opened article/feed when returning from child-view, even if read content is filtered
             \n * Improved speed of update when using long-press on category -> \"Show all articles\"
+            \n * Cleanup of old starred/published articles when refreshing
             \n * Fixed DB-Exceptions
         </item>
         
